Bug 378839 - Krusader freeze when asterisk ("*") is pressed in detailed view
Summary: Krusader freeze when asterisk ("*") is pressed in detailed view
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
: 386707 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-16 14:16 UTC by Zsolt Szakács
Modified: 2018-05-06 00:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zsolt Szakács 2017-04-16 14:16:44 UTC
In Krusader 2.6.0 under Manjaro Linux, when I hit NumPad * for quick search (e.g. to start searching for *.jpg), not only Krusader but the whole system becomes unresponsive, occupying all the CPU and memory resources at the same time.
Comment 1 Alex Bikadorov 2017-04-17 15:20:25 UTC
Thanks for reporting.
Confirmed. However, this is not related to quicksearch or numpad.
When the details view gets a key press event with an asterisk, it is redirected to QTreeView which runs a nasty while loop endlessly. See https://code.woboq.org/qt5/qtbase/src/widgets/itemviews/qtreeview.cpp.html#1989
The bug is there for at least a year. Fix is an one-liner.

You want to start the quick search by pressing "*" on numpad (=> adds KeypadModifier to event in Qt). This doesn't work right now but I can fix it too.
Comment 2 Alex Bikadorov 2017-04-17 15:37:16 UTC
Git commit f484231ce63d99b89d6a78ff443c5bb26d419a66 by Alexander Bikadorov.
Committed on 17/04/2017 at 15:35.
Pushed by abikadorov into branch 'master'.

Panel: fix infinite loop when detailed view gets an asterisk ("*") key event

FIXED: [ 378839 ] Krusader freezes when asterisk ("*") is pressed in detailed view

M  +1    -0    krusader/Panel/krinterdetailedview.cpp

https://commits.kde.org/krusader/f484231ce63d99b89d6a78ff443c5bb26d419a66
Comment 3 Alex Bikadorov 2017-04-17 15:37:16 UTC
Git commit 0b4a79e553159fb1854b70fb89b2215a5e97cfec by Alexander Bikadorov.
Committed on 17/04/2017 at 15:35.
Pushed by abikadorov into branch 'master'.

Panel: start search bar "on typing" numpad keys

M  +2    -1    krusader/Panel/krsearchbar.cpp

https://commits.kde.org/krusader/0b4a79e553159fb1854b70fb89b2215a5e97cfec
Comment 4 Martin Kostolný 2017-11-10 12:25:58 UTC
*** Bug 386707 has been marked as a duplicate of this bug. ***