Panel: fix infinite loop when detailed view gets an asterisk ("*") key event

FIXED: [ 378839 ] Krusader freezes when asterisk ("*") is pressed in detailed view
BUG: 378839